T-24: Add dedicated entries controller
