# dtrack-server-swagger.yaml
@@ -19,7 +19,7 @@ securityDefinitions:
   basicAuth:
     type: basic
     description: HTTP Basic Authentication. Works over `HTTP` and `HTTPS`
-basePath: /
+basePath: /api/v1
 schemes:
   - http
 consumes:
@@ -29,7 +29,7 @@ produces:
 paths:
   /entries:
     get:
-      description: Returns all entries from the system
+      description: Returns all entries for the authenticated user
       operationId: findEntries
       security:
         - basicAuth: []
@@ -45,7 +45,7 @@ paths:
           schema:
             $ref: '#/definitions/errorModel'
     post:
-      description: Creates a new entry.
+      description: Creates a new entry for a user.
       operationId: addEntry
       security:
         - basicAuth: []
@@ -69,7 +69,7 @@ paths:
             $ref: '#/definitions/errorModel'
   '/entries/{id}':
     get:
-      description: 'Returns a user based on a single ID.'
+      description: 'Returns a user owned entry based on a single ID.'
       operationId: findentryById
       security:
         - basicAuth: []
@@ -110,37 +110,16 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/errorModel'
-  /entries/search/findByUser:
-    get:
-      description: Returns all entries that the user has access to
-      operationId: findEntriesByUser
-      security:
-        - basicAuth: []
-      parameters:
-        - name: user
-          in: query
-          required: true
-          type: string
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: entries response
-          schema:
-            $ref: '#/definitions/entry_array'
-        default:
-          description: unexpected error
-          schema:
-            $ref: '#/definitions/errorModel'
 definitions:
   entry:
     type: object
     required:
-      - user
       - type
       - value
       - createdDateTime
     properties:
+      id:
+        type: string
       user:
         type: string
       type:
@@ -153,37 +132,10 @@ definitions:
         type: string
       doubleValue:
         type: double
-      _links:
-        type: object
-        properties:
-          self:
-            type: object
-            properties:
-              href:
-                type: string
-          entry:
-            type: object
-            properties:
-              href:
-                type: string
   entry_array:
-    type: object
-    properties:
-     _embedded:
-        type: object
-        properties:
-          entries:
-            type: array
-            items:
-             $ref: '#/definitions/entry'
-     _links:
-        type: object
-        properties:
-          self:
-            type: object
-            properties:
-              href:
-                type: string
+    type: array
+    items:
+        $ref: '#/definitions/entry'
   errorModel:
     type: object
     required:
